--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Meta information -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="view-transition" content="same-origin" />
-    <!-- External CSS links -->
-    <link rel="stylesheet" href="./styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <!-- Page title -->
-    <title>Tui Café - About</title>
-  </head>
-  <body>
-    <header class="header">
+<link rel="stylesheet" href="./styles.css" />
+<link  rel="stylesheet"  href="https://unpkg.com/tippy.js@6/themes/light.css" />
+<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+   
+   
+   
+   <header class="header">
       <!-- Header container with navigation and logo -->
       <div class="container row">
         <nav class="navbar">
@@ -192,5 +182,3 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <script defer src="./main.js"></script>
-  </body>
-</html>
