--- a/frontend/cafes.html
+++ b/frontend/cafes.html
@@ -23,7 +23,7 @@
           </div>
           <!-- Navigation links -->
           <ul class="nav-links">
-            <li><a class="nav-item" href="./index.html">Home</a></li>
+            <li><a class="nav-item" href="./homepage.html">Home</a></li>
             <li><a class="nav-item" href="./about.html">About</a></li>
             <li><a class="nav-item" href="#">cafes</a></li>
             <li><a class="nav-item" href="./menu.html">Menu</a></li>
@@ -41,7 +41,7 @@
     <section class="hero">
       <!-- Main title section -->
       <div class="container row mobile">
-        <h1 class="main-title">Contact Us</h1>
+        <h1 class="main-title">Cafes</h1>
         <p class="main-sub-title">whakapā mai</p>
         <!-- Cafe location map -->
         <div class="cafe-location">
