--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -23,9 +23,9 @@
           </div>
           <!-- Navigation links -->
           <ul class="nav-links">
-            <li><a class="nav-item" href="./index.html">Home</a></li>
+            <li><a class="nav-item" href="./homepage.html">Home</a></li>
             <li><a class="nav-item" href="./about.html">About</a></li>
-            <li><a class="nav-item" href="./contact.html">Contact</a></li>
+            <li><a class="nav-item" href="./cafes.html">Cafes</a></li>
             <li><a class="nav-item" href="#">Menu</a></li>
             <li><a class="nav-item" href="./gallery.html">Gallery</a></li>
           </ul>
