--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,9 +1,19 @@
-<link rel="stylesheet" href="./styles.css" />
-<link  rel="stylesheet"  href="https://unpkg.com/tippy.js@6/themes/light.css" />
-<link  rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-   
-   
-   
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Meta information -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="view-transition" content="same-origin" />
+    <!-- External CSS links -->
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tippy.js@6/themes/light.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+    <!-- Page title -->
    <header class="header">
       <!-- Header container with navigation and logo -->
       <div class="container row">
@@ -13,9 +23,9 @@
           </div>
           <!-- Navigation links -->
           <ul class="nav-links">
-            <li><a class="nav-item" href="./index.html">Home</a></li>
+            <li><a class="nav-item" href="./homepage.html">Home</a></li>
             <li><a class="nav-item" href="#">About</a></li>
-            <li><a class="nav-item" href="./contact.html">Contact</a></li>
+            <li><a class="nav-item" href="./cafes.html">cafes</a></li>
             <li><a class="nav-item" href="./menu.html">Menu</a></li>
             <li><a class="nav-item" href="./gallery.html">Gallery</a></li>
           </ul>
