--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -26,7 +26,6 @@
             <li><a class="nav-item" href="./homepage.html">Home</a></li>
             <li><a class="nav-item" href="./about.html">About</a></li>
             <li><a class="nav-item" href="./cafes.html">Cafes</a></li>
-            <li><a class="nav-item" href="./menu.html">Menu</a></li>
             <li><a class="nav-item" href="#">Gallery</a></li>
           </ul>
           <!-- Burger menu icon for mobile -->
@@ -82,7 +81,6 @@
           <a href="./index.html">Home</a>
           <a href="./about.html">About Us</a>
           <a href="./contact.html">Contact Us</a>
-          <a href="./menu.html">Menu</a>
           <a href="#">Gallery</a>
         </div>
         <div class="col-2">
@@ -111,13 +109,13 @@
           <p>Whangarei 0112</p>
           <br />
           <p>Phone: 09 438 9563</p>
-          <p>Email: <a id="email-add" href="#">admin@tuicafe.co.nz</a></p>
+          <p>Email: <a id="email-add" href="#">admin@coffeebreak.co.nz</a></p>
         </div>
       </div>
       <div class="copyRight">
         <!-- Copyright information -->
         <p>
-          <span>Copyright &#169; 2023 </span>Tui Café Limited<span>
+          <span>Copyright &#169; 2023 </span>CoffeeBreak Limited<span>
             All rights reserved.</span
           >
         </p>
