--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -17,13 +17,6 @@
     <title>Tui Café - Home</title>
   </head>
   <body>
-    <!-- Implements audio to the homepage -->
-    <audio autoplay id="myAudio">
-      <source
-        src="audio/tui-birdsong-new-zealand-31660.mp3"
-        type="audio/mpeg" />
-    </audio>
-
     <script>
       // reference to the audio element
       var audio = document.getElementById("myAudio");
@@ -48,10 +41,6 @@
             </li>
             <li>
               <a class="nav-item" href="./cafes.html">Cafes</a>
-            </li>
-            <li>
-              <a  class="nav-item" href="./menu.html">Menu</a>
-            </li>
             <li>
               <a class="nav-item" href="./gallery.html">Gallery</a>
             </li>
@@ -89,7 +78,6 @@
           <a href="#">Home</a>
           <a href="./about.html">About Us</a>
           <a href="./contact.html">Contact Us</a>
-          <a href="./menu.html">Menu</a>
           <a href="./gallery.html">Gallery</a>
         </div>
         <div class="col-2">
@@ -118,13 +106,13 @@
           <p>Whangarei 0112</p>
           <br />
           <p>Phone: 09 438 9563</p>
-          <p>Email: <a id="email-add" href="#">admin@tuicafe.co.nz</a></p>
+          <p>Email: <a id="email-add" href="#">admin@coffeebreak.co.nz</a></p>
         </div>
       </div>
       <div class="copyRight">
         <!-- Copyright information -->
         <p>
-          <span>Copyright &#169; 2023 </span>Tui Café Limited<span>
+          <span>Copyright &#169; 2023 </span>CoffeeBreak Limited<span>
             All rights reserved.</span
           >
         </p>
