--- a/frontend/cafes.html
+++ b/frontend/cafes.html
@@ -14,6 +14,33 @@
             height: 600px;
             width: 100%;
         }
+        .form-error {
+            color: red;
+            display: none;
+        }
+        #cafe-count {
+            font-size: 20px;
+            margin-bottom: 10px;
+            color: aliceblue;
+        }
+        .filter-container {
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: aliceblue;
+        }
+        .search-container {
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: aliceblue;
+        }
+        .search-container input {
+            width: calc(90% - 120px);
+            padding: 8px;
+            margin-right: 10px;
+        }
+        .search-container button {
+            padding: 8px 16px;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +55,7 @@
                 <ul class="nav-links">
                     <li><a class="nav-item" href="./homepage.html">Home</a></li>
                     <li><a class="nav-item" href="./about.html">About</a></li>
-                    <li><a class="nav-item" href="#">cafes</a></li>
+                    <li><a class="nav-item" href="#">Cafes</a></li>
                     <li><a class="nav-item" href="./gallery.html">Gallery</a></li>
                 </ul>
                 <!-- Burger menu icon for mobile -->
@@ -44,9 +71,26 @@
         <!-- Main title section -->
         <div class="container row mobile">
             <h1 class="main-title">Cafes</h1>
-            <p class="main-sub-title">whakapā mai</p>
+            <p class="main-sub-title">Whakapā mai</p>
             <!-- Cafe location map -->
             <div class="cafe-location">
+                <div id="cafe-count">Total Cafes Found: <span id="cafe-count-number">0</span></div>
+                <div class="filter-container">
+                    <label for="rating-filter">Filter by Rating: </label>
+                    <select id="rating-filter">
+                        <option value="0">All Ratings</option>
+                        <option value="1">1 Star and Up</option>
+                        <option value="2">2 Stars and Up</option>
+                        <option value="3">3 Stars and Up</option>
+                        <option value="4">4 Stars and Up</option>
+                        <option value="5">5 Stars</option>
+                    </select>
+                </div>
+                <div class="search-container">
+                    <input type="text" id="cafe-search" placeholder="Search for a cafe by name...">
+                    <button id="search-button">Search</button>
+                    <button id="locate-button">Locate Me</button>
+                </div>
                 <div id="map"></div>
             </div>
         </div>
@@ -56,34 +100,35 @@
         <h1>CONTACT US</h1>
         <p>Please drop us a line if you have any questions or suggestions</p>
         <!-- Contact form elements -->
-        <form class="form">
+        <form class="form" id="contact-form">
             <div class="form-row">
                 <div class="form-column">
                     <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Your name here" autocomplete="name" />
+                    <input type="text" id="name" placeholder="Your name here" autocomplete="name" required />
                 </div>
                 <div class="form-column">
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Your email here" autocomplete="email" />
+                    <input type="email" id="email" placeholder="Your email here" autocomplete="email" required />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-column">
                     <label for="subject">Subject</label>
-                    <input type="text" id="subject" placeholder="Your subject here" />
+                    <input type="text" id="subject" placeholder="Your subject here" required />
                 </div>
                 <div class="form-column">
                     <label for="contact">Contact Number</label>
-                    <input type="tel" id="contact" placeholder="Your phone number here" />
+                    <input type="tel" id="contact" placeholder="Your phone number here" pattern="^\d{10}$" required />
                 </div>
             </div>
             <div class="form-row">
                 <div class="form-column">
                     <label for="issue">Describe your issue</label>
-                    <textarea id="issue" placeholder="Describe your issue in detail here" rows="3"></textarea>
+                    <textarea id="issue" placeholder="Describe your issue in detail here" rows="3" required></textarea>
                 </div>
             </div>
-            <button>Submit</button>
+            <button type="submit">Submit</button>
+            <p class="form-error" id="form-error">Please fill out all fields correctly.</p>
         </form>
     </section>
     <!-- footer section -->
@@ -126,11 +171,11 @@
             </p>
         </div>
     </footer>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaB_F1vp6UKCdHsrLASRaOWoSzOApyL2s&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaB_F1vp6UKCdHsrLASRaOWoSzOApyL2s&libraries=places,directions"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            const whangareiLat = -35.7251;  // Whangarei latitude
-            const whangareiLng = 174.3237; // Whangarei longitude
+            const whangareiLat = -35.7251;
+            const whangareiLng = 174.3237;
             const map = new google.maps.Map(document.getElementById('map'), {
                 center: { lat: whangareiLat, lng: whangareiLng },
                 zoom: 13
@@ -138,6 +183,14 @@
 
             const infoWindow = new google.maps.InfoWindow();
             const service = new google.maps.places.PlacesService(map);
+            const directionsService = new google.maps.DirectionsService();
+            const directionsRenderer = new google.maps.DirectionsRenderer();
+            directionsRenderer.setMap(map);
+
+            let highestRatedPlace = null;
+            let highestRating = -1;
+            let cafeCount = 0;
+            let markers = [];
 
             function createMarker(place) {
                 if (!place.geometry || !place.geometry.location) return;
@@ -147,48 +200,182 @@
                     position: place.geometry.location
                 });
 
+                marker.place = place;
+                markers.push(marker);
+
                 google.maps.event.addListener(marker, 'click', () => {
-                    infoWindow.setContent(place.name || 'Unnamed Place');
+                    infoWindow.setContent(`
+                        <div>
+                            <strong>${place.name}</strong><br>
+                            Rating: ${place.rating || 'N/A'}<br>
+                            ${place.vicinity || ''}
+                            <br><button onclick="getDirections(${place.geometry.location.lat()}, ${place.geometry.location.lng()})">Get Directions</button>
+                        </div>
+                    `);
                     infoWindow.open(map, marker);
+                });
+
+                if (place.rating && place.rating > highestRating) {
+                    highestRating = place.rating;
+                    highestRatedPlace = place;
+                }
+
+                cafeCount++;
+                document.getElementById('cafe-count-number').textContent = cafeCount;
+            }
+
+            function fetchPlaces(lat, lng, keyword, minRating = 0) {
+                const request = {
+                    location: new google.maps.LatLng(lat, lng),
+                    radius: '5000',
+                    keyword: keyword
+                };
+
+                service.nearbySearch(request, (results, status) => {
+                    if (status === google.maps.places.PlacesServiceStatus.OK) {
+                        results.forEach((place) => {
+                            if (!place.types.includes('supermarket') && place.name !== 'Coffee News (NZ)' && (!place.rating || place.rating >= minRating)) {
+                                createMarker(place);
+                            }
+                        });
+
+                        if (highestRatedPlace) {
+                            const highestRatedMarker = new google.maps.Marker({
+                                position: highestRatedPlace.geometry.location,
+                                map: map,
+                                icon: {
+                                    url: 'http://maps.google.com/mapfiles/ms/icons/yellow-dot.png'
+                                }
+                            });
+
+                            google.maps.event.addListener(highestRatedMarker, 'click', () => {
+                                infoWindow.setContent(`
+                                    <div>
+                                        <strong>${highestRatedPlace.name}</strong><br>
+                                        Rating: ${highestRatedPlace.rating || 'N/A'}<br>
+                                        ${highestRatedPlace.vicinity || ''}
+                                        <br><button onclick="getDirections(${highestRatedPlace.geometry.location.lat()}, ${highestRatedPlace.geometry.location.lng()})">Get Directions</button>
+                                    </div>
+                                `);
+                                infoWindow.open(map, highestRatedMarker);
+                            });
+                        }
+                    } else {
+                        console.error('Error fetching places:', status);
+                    }
                 });
             }
 
-            function fetchPlaces(lat, lng, keyword) {
-    const location = new google.maps.LatLng(lat, lng);
-    const request = {
-        location: location,
-        radius: '300000', // change radius 
-        keyword: keyword
-    };
+            function getDirections(lat, lng) {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(position => {
+                        const origin = {
+                            lat: position.coords.latitude,
+                            lng: position.coords.longitude
+                        };
+                        const destination = { lat: lat, lng: lng };
 
-    service.nearbySearch(request, (results, status) => {
-        if (status === google.maps.places.PlacesServiceStatus.OK) {
-            results.forEach((place) => {
-                // Filter out supermarkets and specific places like Coffee News (NZ)
-                if (!place.types.includes('supermarket') && place.name !== 'Coffee News (NZ)') {
-                    createMarker(place);
+                        const request = {
+                            origin: origin,
+                            destination: destination,
+                            travelMode: 'DRIVING'
+                        };
+
+                        directionsService.route(request, (result, status) => {
+                            if (status === 'OK') {
+                                directionsRenderer.setDirections(result);
+                            } else {
+                                console.error('Error fetching directions:', status);
+                            }
+                        });
+                    });
+                } else {
+                    alert('Geolocation is not supported by this browser.');
+                }
+            }
+
+            const keywords = ['Cafe', 'Coffee', 'Coffee Shop', 'innoNative Retail Store', 'streetwise Coffee', 'three sisters coffee van', 'columbus coffee', 'the bake house cafe', 'Café', 'dragonfruit cafe'];
+            let minRating = 0;
+            const ratingFilter = document.getElementById('rating-filter');
+            ratingFilter.addEventListener('change', (e) => {
+                minRating = parseInt(e.target.value, 10);
+                markers.forEach(marker => marker.setMap(null));
+                markers = [];
+                cafeCount = 0;
+                document.getElementById('cafe-count-number').textContent = cafeCount;
+
+                keywords.forEach(keyword => {
+                    fetchPlaces(whangareiLat, whangareiLng, keyword, minRating);
+                });
+            });
+
+            keywords.forEach(keyword => {
+                fetchPlaces(whangareiLat, whangareiLng, keyword, minRating);
+            });
+
+            const form = document.getElementById('contact-form');
+            const formError = document.getElementById('form-error');
+
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                if (form.checkValidity()) {
+                    formError.style.display = 'none';
+                    alert('Form submitted successfully!');
+                } else {
+                    formError.style.display = 'block';
                 }
             });
-        } else {
-            console.error('Error fetching places:', status);
-        }
-    });
-}
-            // Search for cafes and coffee places
-            const keywords = ['Cafe', 'cafe', 'Coffee', 'coffee', 'innoNative Retail Store', 'streetwise Coffee', 'three sisters coffee van', 'columbus coffee', ' the bake house cafe', 'Café', 'dragonfruit cafe'];
-            keywords.forEach(keyword => {
-                fetchPlaces(whangareiLat, whangareiLng, keyword);
+
+            const searchButton = document.getElementById('search-button');
+            searchButton.addEventListener('click', () => {
+                const query = document.getElementById('cafe-search').value.toLowerCase();
+                const matchedMarker = markers.find(marker => marker.place.name.toLowerCase().includes(query));
+                if (matchedMarker) {
+                    map.setCenter(matchedMarker.getPosition());
+                    map.setZoom(15);
+                    google.maps.event.trigger(matchedMarker, 'click');
+                } else {
+                    alert('Cafe not found. Please try another name.');
+                }
             });
+
+            // Function to locate the user
+            function locateUser() {
+                if (navigator.geolocation) {
+                    navigator.geolocation.getCurrentPosition(position => {
+                        const userLocation = {
+                            lat: position.coords.latitude,
+                            lng: position.coords.longitude
+                        };
+                        map.setCenter(userLocation);
+                        map.setZoom(15);
+
+                        // Optionally, you can show a marker at the user's location
+                        const userMarker = new google.maps.Marker({
+                            position: userLocation,
+                            map: map,
+                            title: "Your Location"
+                        });
+
+                        // Open an info window if needed
+                        infoWindow.setContent("You are here!");
+                        infoWindow.open(map, userMarker);
+                    }, () => {
+                        alert('Location access denied. Please enable location to use this feature.');
+                    });
+                } else {
+                    alert('Geolocation is not supported by this browser.');
+                }
+            }
+
+            // Event listener for locating the user
+            const locateButton = document.getElementById('locate-button');
+            locateButton.addEventListener('click', locateUser);
+
+            window.getDirections = getDirections;
         });
     </script>
     <script defer src="./main.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
 
