--- a/frontend/about.html
+++ b/frontend/about.html
@@ -15,6 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- Page title -->
    <header class="header">
+    <title>CoffeeBreak - About</title>
       <!-- Header container with navigation and logo -->
       <div class="container row">
         <nav class="navbar">
@@ -66,77 +67,23 @@
     </section>
     <div class="container">
       <!-- Container for embedding a YouTube video -->
-      <div class="about-video">
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/lAd3LYIZMjs?si=hk9OOamfJM_a9MZL"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-      </div>
     </div>
-
     <section class="bottom-section">
       <!-- Section about the staff members -->
-      <h2>Our Team</h2>
+      <h2>Founders</h2>
       <div class="container-ourTeam">
         <!-- <h1 class="ourTeam-heading"><span>meet</span>Our Team</h1> -->
         <div class="ourTeam-profiles">
           <div class="ourTeam-profile">
             <img
-              src="./img/pexels-headchef-7562139.jpg"
+              src="./img/default profile image.jpg"
               class="ourTeam-image"
               alt="" />
-            <h3 class="ourTeam-username">William</h3>
-            <h4 class="ourTeam-title">Head Chef - Owner</h4>
+            <h3 class="ourTeam-username">Helam</h3>
+            <h4 class="ourTeam-title">CEO - Owner</h4>
             <p class="ourTeam-portfolio">
-              I am the orchestrator of culinary symphonies in the kitchen. With
-              years of expertise and a passion for the art of cooking, I've
-              mastered the delicate balance of flavors and the precision of
-              techniques.
+              the founder of CoffeeBreak, a premier website dedicated to helping people discover the best cafes in their local area. With a passion for coffee and a commitment to quality, Helam created CoffeeBreak to connect coffee lovers with hidden gems and popular spots, offering detailed reviews and personalized recommendations to enhance every coffee experience.
             </p>
-          </div>
-          <!-- Our Team Photos and Profiles -->
-          <div class="ourTeam-profile">
-            <img
-              src="./img/pexels-tamra-sous-chef-6497114.jpg"
-              class="ourTeam-image"
-              alt="" />
-            <h3 class="ourTeam-username">Hazel</h3>
-            <h4 class="ourTeam-title">Sous Chef</h4>
-            <p class="ourTeam-portfolio">
-              I'm a passionate sous chef with a deep love for the culinary arts.
-              In the heart of the kitchen, I've honed my skills and knowledge,
-              working alongside talented chefs and exploring a myriad of flavors
-              and techniques.
-            </p>
-          </div>
-          <div class="ourTeam-profile">
-            <img src="./img/pexels-barista.jpg" class="ourTeam-image" alt="" />
-            <h3 class="ourTeam-username">Helena</h3>
-            <h4 class="ourTeam-title">Barista</h4>
-            <p class="ourTeam-portfolio">
-              I'm your friendly neighborhood barista, your go-to coffee
-              connoisseur, and the artist behind your daily caffeine fix. With a
-              deep passion for the perfect brew,
-            </p>
-          </div>
-          <div class="ourTeam-profile">
-            <img
-              src="./img/pexels-admin-7752850.jpg"
-              class="ourTeam-image"
-              alt="" />
-            <h3 class="ourTeam-username">Pieter</h3>
-            <h4 class="ourTeam-title">Administrator</h4>
-            <p class="ourTeam-portfolio">
-              I'm the dedicated administrator at your service,with a keen eye
-              for detail and a knack for problem-solving, I ensure that
-              everything runs smoothly behind the scenes.
-            </p>
-          </div>
-        </div>
-      </div>
     </section>
     <!-- footer section -->
     <footer class="footer">
