--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- Page title -->
-    <title>Tui Café - Gallery</title>
+    <title>CoffeeBreak - Gallery</title>
   </head>
   <body>
     <header class="header">
@@ -48,7 +48,7 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide">
-              <img src="img/pexels-brett-jordan-2297961.jpg" alt="breakfast meal" title="eggs and benidict"/>
+              <img src="img/mokaba coffee.jpg" alt="mokaba coffee" title="mokaba coffee"/>
             </div>
             <div class="swiper-slide">
               <img src="img/greenhill.jpg" alt="green hill with sheep" title="green hill"/>
@@ -60,7 +60,7 @@
               <img src="img/pexels-viktoria-alipatova-2074122.jpg" alt="coffee and cookies" title="coffee & cookies"/>
             </div>
             <div class="swiper-slide">
-              <img src="img/pexels-alex-favali-921374.jpg" alt="seashell meal" title="seashell dish"/>
+              <img src="img/fat camel coffee.jpg" alt="fat camel coffee" title="fat camel coffee"/>
             </div>
           </div>
           <!-- use of pagination -->
