--- a/frontend/cafes.html
+++ b/frontend/cafes.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta information -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="view-transition" content="same-origin" />
-    <!-- External CSS links -->
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <title>Tui Café - Cafes</title>
+    <title>CoffeeBreak - Cafes</title>
     <style>
         #map {
             height: 600px;
             width: 100%;
+            float: left;
+            margin-bottom: 5%;
+        }
+        .cafe-details {
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ddd;
+            background-color: #fff;
+        }
+        .cafe-details h3 {
+            margin-top: 0;
         }
         .form-error {
             color: red;
@@ -41,24 +50,36 @@
         .search-container button {
             padding: 8px 16px;
         }
+        .review-container {
+            margin-top: 20px;
+        }
+        .review-form {
+            margin-top: 20px;
+            display: none;
+        }
+        .review-form textarea {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+        .review-form button {
+            padding: 10px 20px;
+        }
     </style>
 </head>
 <body>
     <header class="header">
-        <!-- Header container with navigation and logo -->
         <div class="container row">
             <nav class="navbar">
                 <div class="logo">
                     <h4>Coffee Break</h4>
                 </div>
-                <!-- Navigation links -->
                 <ul class="nav-links">
                     <li><a class="nav-item" href="./homepage.html">Home</a></li>
                     <li><a class="nav-item" href="./about.html">About</a></li>
                     <li><a class="nav-item" href="#">Cafes</a></li>
                     <li><a class="nav-item" href="./gallery.html">Gallery</a></li>
                 </ul>
-                <!-- Burger menu icon for mobile -->
                 <div class="burger">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -68,11 +89,9 @@
         </div>
     </header>
     <section class="hero">
-        <!-- Main title section -->
         <div class="container row mobile">
             <h1 class="main-title">Cafes</h1>
             <p class="main-sub-title">Whakapā mai</p>
-            <!-- Cafe location map -->
             <div class="cafe-location">
                 <div id="cafe-count">Total Cafes Found: <span id="cafe-count-number">0</span></div>
                 <div class="filter-container">
@@ -92,14 +111,13 @@
                     <button id="locate-button">Locate Me</button>
                 </div>
                 <div id="map"></div>
+                <div id="sidebar"></div>
             </div>
         </div>
     </section>
     <section class="form-container mobile">
-        <!-- Contact form section -->
         <h1>CONTACT US</h1>
         <p>Please drop us a line if you have any questions or suggestions</p>
-        <!-- Contact form elements -->
         <form class="form" id="contact-form">
             <div class="form-row">
                 <div class="form-column">
@@ -131,7 +149,6 @@
             <p class="form-error" id="form-error">Please fill out all fields correctly.</p>
         </form>
     </section>
-    <!-- footer section -->
     <footer class="footer">
         <div class="grid-container">
             <div class="col-1">
@@ -142,7 +159,6 @@
                 <a href="./gallery.html">Gallery</a>
             </div>
             <div class="col-2">
-                <!-- Social media links and motto -->
                 <h3 class="footer-title">FOLLOW US</h3>
                 <div class="social-media">
                     <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
@@ -154,7 +170,6 @@
                 </div>
             </div>
             <div class="col-3">
-                <!-- Contact information -->
                 <h3 class="footer-title">CONTACT US</h3>
                 <p>97 Western Hills Drive,</p>
                 <p>Kensington,</p>
@@ -165,7 +180,6 @@
             </div>
         </div>
         <div class="copyRight">
-            <!-- Copyright information -->
             <p>
                 <span>Copyright &#169; 2023 </span>CoffeeBreak Limited<span> All rights reserved.</span>
             </p>
@@ -187,20 +201,23 @@
             const directionsRenderer = new google.maps.DirectionsRenderer();
             directionsRenderer.setMap(map);
 
-            let highestRatedPlace = null;
-            let highestRating = -1;
-            let cafeCount = 0;
             let markers = [];
+            let cafeCount = 0;
+            let highestRatedPlace = null;
+            let highestRating = 0;
 
             function createMarker(place) {
                 if (!place.geometry || !place.geometry.location) return;
 
                 const marker = new google.maps.Marker({
                     map: map,
-                    position: place.geometry.location
+                    position: place.geometry.location,
+                    place: {
+                        placeId: place.place_id,
+                        location: place.geometry.location
+                    }
                 });
 
-                marker.place = place;
                 markers.push(marker);
 
                 google.maps.event.addListener(marker, 'click', () => {
@@ -210,6 +227,15 @@
                             Rating: ${place.rating || 'N/A'}<br>
                             ${place.vicinity || ''}
                             <br><button onclick="getDirections(${place.geometry.location.lat()}, ${place.geometry.location.lng()})">Get Directions</button>
+                            <br><button onclick="toggleReviewForm('${place.place_id}')">Leave a Review</button>
+                            <div class="review-form" id="review-form-${place.place_id}">
+                                <textarea id="review-text-${place.place_id}" placeholder="Write your review here..."></textarea>
+                                <button onclick="submitReview('${place.place_id}', '${place.name}')">Submit Review</button>
+                            </div>
+                            <div class="review-container" id="review-container-${place.place_id}">
+                                <h4>Reviews:</h4>
+                                <div id="reviews-${place.place_id}"></div>
+                            </div>
                         </div>
                     `);
                     infoWindow.open(map, marker);
@@ -222,6 +248,31 @@
 
                 cafeCount++;
                 document.getElementById('cafe-count-number').textContent = cafeCount;
+            }
+
+            function toggleReviewForm(placeId) {
+                const form = document.getElementById(`review-form-${placeId}`);
+                form.style.display = form.style.display === 'block' ? 'none' : 'block';
+            }
+
+            function submitReview(placeId, name) {
+                const reviewText = document.getElementById(`review-text-${placeId}`).value;
+                if (reviewText.trim() === '') {
+                    alert('Please write a review before submitting.');
+                    return;
+                }
+                const reviewContainer = document.getElementById(`reviews-${placeId}`);
+                const reviewDiv = document.createElement('div');
+                reviewDiv.classList.add('user-review');
+                reviewDiv.innerHTML = `
+                    <strong>User:</strong><br>
+                    <p>${reviewText}</p>
+                    <hr>
+                `;
+                reviewContainer.appendChild(reviewDiv);
+                document.getElementById(`review-form-${placeId}`).style.display = 'none';
+                document.getElementById(`review-text-${placeId}`).value = '';
+                alert('Review submitted successfully!');
             }
 
             function fetchPlaces(lat, lng, keyword, minRating = 0) {
@@ -255,6 +306,15 @@
                                         Rating: ${highestRatedPlace.rating || 'N/A'}<br>
                                         ${highestRatedPlace.vicinity || ''}
                                         <br><button onclick="getDirections(${highestRatedPlace.geometry.location.lat()}, ${highestRatedPlace.geometry.location.lng()})">Get Directions</button>
+                                        <br><button onclick="toggleReviewForm('${highestRatedPlace.place_id}')">Leave a Review</button>
+                                        <div class="review-form" id="review-form-${highestRatedPlace.place_id}">
+                                            <textarea id="review-text-${highestRatedPlace.place_id}" placeholder="Write your review here..."></textarea>
+                                            <button onclick="submitReview('${highestRatedPlace.place_id}', '${highestRatedPlace.name}')">Submit Review</button>
+                                        </div>
+                                        <div class="review-container" id="review-container-${highestRatedPlace.place_id}">
+                                            <h4>Reviews:</h4>
+                                            <div id="reviews-${highestRatedPlace.place_id}"></div>
+                                        </div>
                                     </div>
                                 `);
                                 infoWindow.open(map, highestRatedMarker);
@@ -294,11 +354,15 @@
                 }
             }
 
-            const keywords = ['Cafe', 'Coffee', 'Coffee Shop', 'innoNative Retail Store', 'streetwise Coffee', 'three sisters coffee van', 'columbus coffee', 'the bake house cafe', 'Café', 'dragonfruit cafe'];
+            const keywords = ['Cafe', 'Coffee', 'Coffee Shop', 'innoNative Retail Store', 'streetwise Coffee', 'three sisters coffee van', 'columbus coffee', 'the bake house cafe', 'Café', 'dragonfruit cafe', 'jolt cafe', 'well cafe', 'totara cafe', 'wave cafe', 'acropolis cafe bar & grill',];
             let minRating = 0;
             const ratingFilter = document.getElementById('rating-filter');
-            ratingFilter.addEventListener('change', (e) => {
-                minRating = parseInt(e.target.value, 10);
+            ratingFilter.addEventListener('change', () => {
+                minRating = parseInt(ratingFilter.value, 10);
+                fetchFilteredPlaces();
+            });
+
+            function fetchFilteredPlaces() {
                 markers.forEach(marker => marker.setMap(null));
                 markers = [];
                 cafeCount = 0;
@@ -307,11 +371,9 @@
                 keywords.forEach(keyword => {
                     fetchPlaces(whangareiLat, whangareiLng, keyword, minRating);
                 });
-            });
+            }
 
-            keywords.forEach(keyword => {
-                fetchPlaces(whangareiLat, whangareiLng, keyword, minRating);
-            });
+            fetchFilteredPlaces();
 
             const form = document.getElementById('contact-form');
             const formError = document.getElementById('form-error');
@@ -339,7 +401,6 @@
                 }
             });
 
-            // Function to locate the user
             function locateUser() {
                 if (navigator.geolocation) {
                     navigator.geolocation.getCurrentPosition(position => {
@@ -350,14 +411,12 @@
                         map.setCenter(userLocation);
                         map.setZoom(15);
 
-                        // Optionally, you can show a marker at the user's location
                         const userMarker = new google.maps.Marker({
                             position: userLocation,
                             map: map,
                             title: "Your Location"
                         });
 
-                        // Open an info window if needed
                         infoWindow.setContent("You are here!");
                         infoWindow.open(map, userMarker);
                     }, () => {
@@ -368,14 +427,14 @@
                 }
             }
 
-            // Event listener for locating the user
             const locateButton = document.getElementById('locate-button');
             locateButton.addEventListener('click', locateUser);
 
             window.getDirections = getDirections;
+            window.toggleReviewForm = toggleReviewForm;
+            window.submitReview = submitReview;
         });
     </script>
     <script defer src="./main.js"></script>
 </body>
 </html>
-
