--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <!-- Page title -->
-    <title>Tui Café - Home</title>
+    <title>CoffeeBreak - Home</title>
   </head>
   <body>
     <script>
